--- a/trunk/099/config/equip.cfg
+++ b/trunk/099/config/equip.cfg
@@ -153,6 +153,23 @@ equipment xbowman
 weapon 0x0f4f
 }
 
+equipment shuriken
+{
+weapon 0x2790
+}
+
+equipment throwingdarts
+{
+weapon 0x27f5
+}
+
+equipment throwingaxes
+{
+weapon 0x27db
+}
+
+
+
 Equipment banker
 {
 	Equip	0x170B	0		// boots
@@ -670,5 +687,14 @@ Equipment santaelf
 	Equip	0x1539	33	//long pants, red
 	Equip	0x170B	72	//boots, green
 	Equip	0x13C6    33	//leather gloves, red
+}
+
+Equipment eliteninja
+{
+	Equip	0x27de 	37
+	Equip	0x27d9 	37
+	Equip	0x27e2 	37
+	Equip	0x27dd 	37
+	Equip	0x27dc 	37
 }
 
