--- a/trunk/099/pkg/combat/armor/itemdesc.cfg
+++ b/trunk/099/pkg/combat/armor/itemdesc.cfg
@@ -176,7 +176,7 @@ Armor 0x1708b
 	Coverage		Head
 	VendorSellsFor	72
 	VendorBuysFor	24
-	MaxHP		104
+	MaxHP		128
 	blockcircle	7
 	strrequired	53
 	script		:combat:equipitem
@@ -1897,15 +1897,17 @@ Armor 0x2305
 // CLOTHING
 ///////////////////
 
-Armor 0x27eb
+Armor 0x27cd
 {
-	Name			Obi
+	Name			MaleKimono
 	Coverage		Body
-	AR			2
-	MaxHP		50
+	Coverage		Legs/feet
+	Coverage		Arms
+	AR			4
+	MaxHP		75
 	blockcircle	9
-	VendorSellsFor	22
-	VendorBuysFor	4
+	VendorSellsFor	55
+	VendorBuysFor	11
 	script		:combat:equipitem
 	equipscript	:combat:item_equip
 	unequipscript	:combat:item_unequip
@@ -1927,32 +1929,16 @@ Armor 0x27ce
 	unequipscript	:combat:item_unequip
 }
 
-Armor 0x27cd
+Armor 0x27da
 {
-	Name			MaleKimono
-	Coverage		Body
-	Coverage		Legs/feet
-	Coverage		Arms
+	Name			ClothNinjaHood
+	desc			cloth ninja hood
+	VendorSellsFor	10
+	VendorBuysFor	2
 	AR			4
-	MaxHP		75
+	Coverage		Head
+	MaxHP		50
 	blockcircle	9
-	VendorSellsFor	55
-	VendorBuysFor	11
-	script		:combat:equipitem
-	equipscript	:combat:item_equip
-	unequipscript	:combat:item_unequip
-}
-
-Armor 0x27e7
-{
-	Name			HakamaShita
-	Coverage		Body
-	Coverage		Arms
-	AR			4
-	MaxHP		75
-	blockcircle	9
-	VendorSellsFor	55
-	VendorBuysFor	11
 	script		:combat:equipitem
 	equipscript	:combat:item_equip
 	unequipscript	:combat:item_unequip
@@ -1969,65 +1955,6 @@ Armor 0x27df
 	blockcircle	9
 	VendorSellsFor	55
 	VendorBuysFor	11
-	script		:combat:equipitem
-	equipscript	:combat:item_equip
-	unequipscript	:combat:item_unequip
-}
-
-Armor 0x27e4
-{
-	Name			Kamishimo
-	Coverage		Body
-	Coverage		Legs/feet
-	Coverage		Arms
-	AR			4
-	MaxHP		75
-	blockcircle	9
-	VendorSellsFor	55
-	VendorBuysFor	11
-	script		:combat:equipitem
-	equipscript	:combat:item_equip
-	unequipscript	:combat:item_unequip
-}
-
-Armor 0x27ec
-{
-	Name			JinBaori
-	Coverage		Body
-	AR			4
-	MaxHP		75
-	blockcircle	9
-	VendorSellsFor	55
-	VendorBuysFor	10
-	weight		2
-	script		:combat:equipitem
-	equipscript	:combat:item_equip
-	unequipscript	:combat:item_unequip
-}
-
-Armor 0x27e6
-{
-	Name			TattsukeHakama
-	Coverage		Legs/feet
-	AR			4
-	MaxHP		50
-	blockcircle	9
-	VendorSellsFor	32
-	VendorBuysFor	6
-	script		:combat:equipitem
-	equipscript	:combat:item_equip
-	unequipscript	:combat:item_unequip
-}
-
-Armor 0x27e5
-{
-	Name			Hakama
-	Coverage		Legs/feet
-	AR			4
-	MaxHP		50
-	blockcircle	9
-	VendorSellsFor	42
-	VendorBuysFor	8
 	script		:combat:equipitem
 	equipscript	:combat:item_equip
 	unequipscript	:combat:item_unequip
@@ -2061,21 +1988,6 @@ Armor 0x27e2
 	unequipscript	:combat:item_unequip
 }
 
-Armor 0x27da
-{
-	Name			ClothNinjaHood
-	desc			cloth ninja hood
-	VendorSellsFor	10
-	VendorBuysFor	2
-	AR			4
-	Coverage		Head
-	MaxHP		50
-	blockcircle	9
-	script		:combat:equipitem
-	equipscript	:combat:item_equip
-	unequipscript	:combat:item_unequip
-}
-
 Armor 0x27e3
 {
 	Name			Kasa
@@ -2090,10 +2002,99 @@ Armor 0x27e3
 	unequipscript	:combat:item_unequip
 }
 
+Armor 0x27e4
+{
+	Name			Kamishimo
+	Coverage		Body
+	Coverage		Legs/feet
+	Coverage		Arms
+	AR			4
+	MaxHP		75
+	blockcircle	9
+	VendorSellsFor	55
+	VendorBuysFor	11
+	script		:combat:equipitem
+	equipscript	:combat:item_equip
+	unequipscript	:combat:item_unequip
+}
+
+Armor 0x27e5
+{
+	Name			Hakama
+	Coverage		Legs/feet
+	AR			4
+	MaxHP		50
+	blockcircle	9
+	VendorSellsFor	42
+	VendorBuysFor	8
+	script		:combat:equipitem
+	equipscript	:combat:item_equip
+	unequipscript	:combat:item_unequip
+}
+
+Armor 0x27e6
+{
+	Name			TattsukeHakama
+	Coverage		Legs/feet
+	AR			4
+	MaxHP		50
+	blockcircle	9
+	VendorSellsFor	32
+	VendorBuysFor	6
+	script		:combat:equipitem
+	equipscript	:combat:item_equip
+	unequipscript	:combat:item_unequip
+}
+
+Armor 0x27e7
+{
+	Name			HakamaShita
+	Coverage		Body
+	Coverage		Arms
+	AR			4
+	MaxHP		75
+	blockcircle	9
+	VendorSellsFor	55
+	VendorBuysFor	11
+	script		:combat:equipitem
+	equipscript	:combat:item_equip
+	unequipscript	:combat:item_unequip
+}
+
+Armor 0x27eb
+{
+	Name			Obi
+	Coverage		Body
+	AR			2
+	MaxHP		50
+	blockcircle	9
+	VendorSellsFor	22
+	VendorBuysFor	4
+	script		:combat:equipitem
+	equipscript	:combat:item_equip
+	unequipscript	:combat:item_unequip
+}
+
+Armor 0x27ec
+{
+	Name			JinBaori
+	Coverage		Body
+	AR			4
+	MaxHP		75
+	blockcircle	9
+	VendorSellsFor	55
+	VendorBuysFor	10
+	weight		2
+	script		:combat:equipitem
+	equipscript	:combat:item_equip
+	unequipscript	:combat:item_unequip
+}
+
+
 
 
 ///////////////////
-// LEATHER
+// LEATHER YOROI
 ///////////////////
 
 
@@ -2127,20 +2128,6 @@ Armor 0x27C9
 	unequipscript	:combat:item_unequip
 }
 
-Armor 0x27DD
-{
-	Name			LeatherNinjaMitts
-	AR			12
-	Coverage		Hands
-	VendorSellsFor	36
-	VendorBuysFor	12
-	MaxHP		104
-	blockcircle	7
-	script		:combat:equipitem
-	equipscript	:combat:item_equip
-	unequipscript	:combat:item_unequip
-}
-
 Armor 0x27C3
 {
 	Name			LeatherKabuto
@@ -2161,22 +2148,6 @@ Armor 0x27C1
 	Name			LeatherJingasa
 	AR			12
 	Coverage		Head
-	VendorSellsFor	48
-	VendorBuysFor	16
-	MaxHP		104
-	blockcircle	7
-	script		:combat:equipitem
-	equipscript	:combat:item_equip
-	unequipscript	:combat:item_unequip
-}
-
-Armor 0x27D9
-{
-	Name			LeatherNinjaHood
-	Desc			leather ninja hood
-	AR			12
-	Coverage		Head
-	Coverage		Neck
 	VendorSellsFor	48
 	VendorBuysFor	16
 	MaxHP		104
@@ -2214,21 +2185,6 @@ Armor 0x27C6
 	unequipscript	:combat:item_unequip
 }
 
-Armor 0x27DE
-{
-	Name			LeatherNinjaJacket
-	AR			12
-	Coverage		Body
-	Coverage		Arms
-	VendorSellsFor	120
-	VendorBuysFor	40
-	MaxHP		104
-	blockcircle	7
-	script		:combat:equipitem
-	equipscript	:combat:item_equip
-	unequipscript	:combat:item_unequip
-}
-
 Armor 0x27D5
 {
 	Name			LeatherHaidate
@@ -2243,60 +2199,16 @@ Armor 0x27D5
 	unequipscript	:combat:item_unequip
 }
 
-Armor 0x27DC
-{
-	Name			LeatherNinjaPants
-	AR			12
-	Coverage		Legs/feet
-	VendorSellsFor	120
-	VendorBuysFor	40
-	MaxHP		104
-	blockcircle	7
-	script		:combat:equipitem
-	equipscript	:combat:item_equip
-	unequipscript	:combat:item_unequip
-}
-
 ///////////////////
-// STUDDED LEATHER
+// LEATHER NINJA
 ///////////////////
 
-Armor 0x27D4
+Armor 0x27D9
 {
-	Name			StuddedKabuto
-	Desc			studded kabuto
+	Name			LeatherNinjaHood
+	Desc			leather ninja hood
 	AR			14
 	Coverage		Head
-	VendorSellsFor	72
-	VendorBuysFor	24
-	MaxHP		104
-	blockcircle	7
-	strrequired	53
-	script		:combat:equipitem
-	equipscript	:combat:item_equip
-	unequipscript	:combat:item_unequip
-}
-
-Armor 0x27CF
-{
-	Name			StuddedJingasa
-	Desc			studded jingasa
-	AR			14
-	Coverage		Head
-	VendorSellsFor	72
-	VendorBuysFor	24
-	MaxHP		104
-	blockcircle	7
-	strrequired	53
-	script		:combat:equipitem
-	equipscript	:combat:item_equip
-	unequipscript	:combat:item_unequip
-}
-
-Armor 0x27E8
-{
-	Name			StuddedMempo
-	AR			14
 	Coverage		Neck
 	VendorSellsFor	48
 	VendorBuysFor	16
@@ -2308,18 +2220,116 @@ Armor 0x27E8
 	unequipscript	:combat:item_unequip
 }
 
+Armor 0x27DC
+{
+	Name			LeatherNinjaPants
+	AR			14
+	Coverage		Legs/feet
+	VendorSellsFor	120
+	VendorBuysFor	40
+	MaxHP		128
+	blockcircle	6
+	strrequired	60
+	script		:combat:equipitem
+	equipscript	:combat:item_equip
+	unequipscript	:combat:item_unequip
+}
+
+Armor 0x27DD
+{
+	Name			LeatherNinjaMitts
+	AR			14
+	Coverage		Hands
+	VendorSellsFor	36
+	VendorBuysFor	12
+	MaxHP		128
+	blockcircle	6
+	strrequired	55
+	script		:combat:equipitem
+	equipscript	:combat:item_equip
+	unequipscript	:combat:item_unequip
+}
+
+Armor 0x27DE
+{
+	Name			LeatherNinjaJacket
+	AR			14
+	Coverage		Body
+	Coverage		Arms
+	VendorSellsFor	120
+	VendorBuysFor	40
+	MaxHP		128
+	blockcircle	6
+	strrequired	60
+	script		:combat:equipitem
+	equipscript	:combat:item_equip
+	unequipscript	:combat:item_unequip
+}
+
+
+///////////////////
+// STUDDED LEATHER
+///////////////////
+
+Armor 0x27D4
+{
+	Name			StuddedKabuto
+	Desc			studded kabuto
+	AR			17
+	Coverage		Head
+	VendorSellsFor	72
+	VendorBuysFor	24
+	MaxHP		128
+	blockcircle	3
+	strrequired	63
+	script		:combat:equipitem
+	equipscript	:combat:item_equip
+	unequipscript	:combat:item_unequip
+}
+
+Armor 0x27CF
+{
+	Name			StuddedJingasa
+	Desc			studded jingasa
+	AR			17
+	Coverage		Head
+	VendorSellsFor	72
+	VendorBuysFor	24
+	MaxHP		128
+	blockcircle	3
+	strrequired	63
+	script		:combat:equipitem
+	equipscript	:combat:item_equip
+	unequipscript	:combat:item_unequip
+}
+
+Armor 0x27E8
+{
+	Name			StuddedMempo
+	AR			17
+	Coverage		Neck
+	VendorSellsFor	48
+	VendorBuysFor	16
+	MaxHP		128
+	blockcircle	3
+	strrequired	63
+	script		:combat:equipitem
+	equipscript	:combat:item_equip
+	unequipscript	:combat:item_unequip
+}
+
 Armor 0x27CA
 {
 	Name			StuddedHiroSode
 	Desc			studded hiro sode
-	AR			14
+	AR			17
 	Coverage		Arms
 	Coverage		Hands
 	VendorSellsFor	120
 	VendorBuysFor	40
 	MaxHP		128
-	blockcircle	6
-	strrequired	58
+	blockcircle	3
+	strrequired	68
 	script		:combat:equipitem
 	equipscript	:combat:item_equip
 	unequipscript	:combat:item_unequip
@@ -2328,13 +2338,13 @@ Armor 0x27CA
 Armor 0x27D2
 {
 	Name			StuddedSuneate
-	AR			14
+	AR			17
 	Coverage		Legs/feet
 	VendorSellsFor	192
 	VendorBuysFor	64
 	MaxHP		128
-	blockcircle	6
-	strrequired	60
+	blockcircle	3
+	strrequired	70
 	script		:combat:equipitem
 	equipscript	:combat:item_equip
 	unequipscript	:combat:item_unequip
@@ -2343,13 +2353,13 @@ Armor 0x27D2
 Armor 0x27C7
 {
 	Name			StuddedDo
-	AR			14
+	AR			17
 	Coverage		Body
 	VendorSellsFor	192
 	VendorBuysFor	64
 	MaxHP		128
-	blockcircle	6
-	strrequired	60
+	blockcircle	3
+	strrequired	70
 	script		:combat:equipitem
 	equipscript	:combat:item_equip
 	unequipscript	:combat:item_unequip
@@ -2358,13 +2368,13 @@ Armor 0x27C7
 Armor 0x27D6
 {
 	Name			StuddedHaidate
-	AR			14
+	AR			17
 	Coverage		Legs/feet
 	VendorSellsFor	192
 	VendorBuysFor	64
 	MaxHP		128
-	blockcircle	6
-	strrequired	60
+	blockcircle	3
+	strrequired	70
 	script		:combat:equipitem
 	equipscript	:combat:item_equip
 	unequipscript	:combat:item_unequip
