--- a/trunk/099/pkg/items/decorations/itemdesc.cfg
+++ b/trunk/099/pkg/items/decorations/itemdesc.cfg
@@ -723,7 +723,7 @@ Item  0xB010
 	Color		1425
 	script		christmastreedeed
 	weight		1
-	SaveOnExit	0
+//	SaveOnExit	0
 }
 
 Item  0xB011
@@ -732,8 +732,82 @@ Item  0xB011
 	Desc			Christmas tree
 	Graphic		0x0cd7
 	weight		200
-	SaveOnExit	0
+//	SaveOnExit	0
 }
+/////////////
+// christmas decoration from the new clients
+/////////////
+
+Item  0x2328
+{
+	Name			snowman
+//	SaveOnExit	0
+}
+
+Item  0x232a
+{
+	Name			presentbox
+//	SaveOnExit	0
+}
+
+Item  0x232c
+{
+	Name			wreath
+//	SaveOnExit	0
+}
+
+Item  0x232e
+{
+	Name			snowflake1
+//	SaveOnExit	0
+}
+
+Item  0x232f
+{
+	Name			snowflake2
+//	SaveOnExit	0
+}
+
+Item  0x2330
+{
+	Name			poinsettia1
+//	SaveOnExit	0
+}
+
+Item  0x2331
+{
+	Name			poinsettia2
+//	SaveOnExit	0
+}
+
+Item  0x236e
+{
+	Name			holidaycandle
+//	SaveOnExit	0
+}
+
+Item  0x2374
+{
+	Name			mistletoe
+//	SaveOnExit	0
+}
+
+Item  0x2377
+{
+	Name			snowytree
+//	SaveOnExit	0
+}
+
+Item  0x2332
+{
+	Name			christmaswisps
+	Desc			christmas wisps
+	Facing		29
+	weight		1
+//	SaveOnExit	0
+}
+
+
 
 Item  0xB012
 {
