--- a/trunk/099/pkg/npcs/animals/domestic_animals/npcdesc.cfg
+++ b/trunk/099/pkg/npcs/animals/domestic_animals/npcdesc.cfg
@@ -489,7 +489,7 @@ NpcTemplate cow
 	Tactics			50
 	Wrestling			50
 
-	npc_helper		bull1
+	npc_helper		bull
 	npc_helper		bull2
 	npc_helper		cow2
 
@@ -527,9 +527,9 @@ NpcTemplate cow2
 	Tactics			50
 	Wrestling			50
 
-	npc_helper		bull1
+	npc_helper		bull
 	npc_helper		bull2
-	npc_helper		cow1
+	npc_helper		cow
 
 	tameskill			30
 	food				veggie
@@ -566,7 +566,7 @@ NpcTemplate bull
 	Wrestling			70
 
 	npc_helper		bull2
-	npc_helper		cow1
+	npc_helper		cow
 	npc_helper		cow2
 
 	tameskill			80
@@ -603,8 +603,8 @@ NpcTemplate bull2
 	Tactics			50
 	Wrestling			70
 
-	npc_helper		bull1
-	npc_helper		cow1
+	npc_helper		bull
+	npc_helper		cow
 	npc_helper		cow2
 
 	tameskill			80
