--- a/trunk/099/pkg/npcs/hostiles/tokuno/npcdesc.cfg
+++ b/trunk/099/pkg/npcs/hostiles/tokuno/npcdesc.cfg
@@ -3,25 +3,28 @@ entry CreateNPCInfo
 	groupname		tokuno
 	groupgraphic	0x20d6
 	npc			bakekitsune		0x2763
-//	npc			crane				0x2764
-//	npc			deathwatchbeetle	0x2765
-//	npc			denkouyajuu		0x2766
+	npc			crane				0x2764
+	npc			deathwatchbeetlehatchling	0x2765
+	npc			deathwatchbeetle	0x2765
+	npc			rai-ju				0x2766
 	npc			fandancer			0x2767
-//	npc			gaman			0x2768
-//	npc			gouzenha			0x2769
+	npc			gaman			0x2768
+	npc			kazekemono		0x2769
 	npc			hiryu				0x276a
-//	npc			kappa			0x276b
-//	npc			ladyofthesnow		0x276c
+	npc			lesserhiryu				0x276a
+	npc			kappa			0x276b
+	npc			ladyofthesnow		0x276c
 	npc			oni				0x276d
 	npc			revenantlion		0x276e
 	npc			runebeetle			0x276f
-//	npc			tsukiwolf			0x2770
-//	npc			yamandon			0x2771
-//	npc			yomotsuelder		0x2772
-//	npc			yomotsupriest		0x2773
-//	npc			yomotsuwarrior		0x281b
-//	npc			firebeetle			0x281c
-	
+	npc			tsukiwolf			0x2770
+	npc			yamandon			0x2771
+	npc			yomotsuelder		0x2772
+	npc			yomotsupriest		0x2773
+	npc			yomotsuwarrior		0x281b
+	npc			firebeetle			0x281c	
+	npc			eliteninja			0x2767
+	npc			ronin				0x2767
 }
 
 NpcTemplate bakekitsune
@@ -35,6 +38,7 @@ NpcTemplate bakekitsune
 	STR			220
 	INT			425
 	DEX			145
+	CProp	BonusMaxHP i130
 	HITS			350
 	MANA		425
 	STAM		145
@@ -76,6 +80,153 @@ NpcTemplate bakekitsune
 	fire				strong
 }
 
+NpcTemplate crane
+{
+	Name			a crane
+	script		:wild_animals:ai_animal_barker
+	ObjType		254
+	Color		0
+	TrueColor		0
+	Gender		0
+	STR			35
+	INT			15
+	DEX			25
+	HITS			35
+	MANA			0
+	STAM			25
+
+	AttackSpeed		20
+	AttackDamage		1
+	AttackAttribute	Wrestling
+	AttackHitScript	:npchitscripts:defaulthitscript
+	AttackHitSound		0x4d8
+	AttackMissSound	0x4db
+	DeathSound		0x4d7
+	AR				5
+
+	MagicResistance	20
+	Tactics			50
+	Wrestling			10
+
+	guardignore		1
+	provoke			10
+	MoveMode			LA
+}
+
+NpcTemplate deathwatchbeetlehatchling
+{
+	Name			a deathwatch beetle hatchling
+	script			:hostiles:ai_killpcs_normal_default
+	ObjType		242
+	Color			0
+	TrueColor		0
+	Gender		0
+	STR			50
+	INT			30
+	DEX			55
+	CProp	BonusMaxHP	i10
+	HITS			60
+	MANA		30
+	STAM		55
+
+	AttackSpeed		35
+	AttackDamage		3d6
+	AttackAttribute		Wrestling
+	AttackHitScript		:npchitscripts:defaulthitscript
+	AttackHitSound		0x4fd
+	AttackMissSound		0x500
+	DeathSound		0x4fc
+	AR				20
+
+	Tactics			60
+	Wrestling			40
+	MagicResistance		40
+	Anatomy			25
+
+	virtue			1
+	provoke			33
+	hostile			1
+	fire				weak
+	cold				weak
+	electrical			weak
+}
+
+NpcTemplate deathwatchbeetle
+{
+	Name			a deathwatch beetle
+	script			:hostiles:ai_killpcs_normal_default
+	ObjType		242
+	Color			0
+	TrueColor		0
+	Gender		0
+	STR			160
+	INT			40
+	DEX			52
+	HITS			160
+	MANA		40
+	STAM		52
+
+	AttackSpeed		35
+	AttackDamage		4d6
+	AttackAttribute		Wrestling
+	AttackHitScript		:npchitscripts:defaulthitscript
+	AttackHitSound		0x4fd
+	AttackMissSound		0x500
+	DeathSound		0x4fc
+	AR				30
+
+	Tactics			80
+	Wrestling			60
+	MagicResistance		60
+	Anatomy			35
+
+	virtue			1
+	tameskill			41
+	food				veggie
+	provoke			53
+	hostile			1
+	fire				weak
+	cold				weak
+	electrical			weak
+}
+
+NpcTemplate raiju
+{
+	Name			a rai-ju
+	script		:hostiles:ai_killpcs_normal_default
+	ObjType		199
+	Color		0
+	TrueColor		0
+	Gender		0
+	STR			225
+	INT			180
+	DEX			135
+	CProp	BonusMaxHP	i60
+	HITS			285
+	MANA		180
+	STAM		135
+
+	AttackSpeed		30
+	AttackDamage		3d6+2
+	AttackAttribute	Wrestling
+	AttackHitScript	:npchitscripts:defaulthitscript
+	AttackHitSound		0x10F
+	AttackMissSound	0x239
+	AR				40
+
+	MagicResistance		120
+	Tactics			65
+	Wrestling			95
+	Anatomy			35
+
+	provoke			82
+	hostile			1
+	poison			strong
+	fire				strong
+	electrical			strong
+	nocorpse			1
+}
+
 NpcTemplate fandancer
 {
 	Name			a fan dancer
@@ -87,6 +238,7 @@ NpcTemplate fandancer
 	STR			375
 	INT			25
 	DEX			255
+	CProp	BonusMaxHP i55
 	HITS			430
 	MANA			25
 	STAM			255
@@ -116,6 +268,99 @@ NpcTemplate fandancer
 	poison			strong
 }
 
+NpcTemplate gaman
+{
+	Name			a gaman
+	script		:domestic_animals:ai_animal_barker
+	ObjType		248
+	Color		0
+	TrueColor		0
+	Gender		0
+	STR			175
+	INT			60
+	DEX			150
+	HITS			175
+	MANA			0
+	STAM			150
+
+	AttackSpeed		35
+	AttackDamage		4d6+3
+	AttackAttribute	Wrestling
+	AttackHitScript	:npchitscripts:defaulthitscript
+	AttackHitSound		0x4f7
+	AttackMissSound	0x4fb
+	DeathSound		0x4f6
+	AR				30
+
+	MagicResistance		45
+	Tactics			85
+	Wrestling			60
+
+	npc_helper		bull
+	npc_helper		bull2
+	npc_helper		cow
+	npc_helper		cow2
+
+	tameskill			69
+	food				veggie
+	provoke			59
+	guardignore		1
+	poison			strong
+}
+
+NpcTemplate kazekemono
+{
+	Name			a kaze kemono
+	script			:hostiles:ai_killpcs_normal_spellcaster
+	ObjType		196
+	Color			0
+	TrueColor		0
+	Gender		2
+	STR			275
+	INT			105
+	DEX			155
+	CProp	BonusMaxHP i55
+	HITS			330
+	MANA		105
+	STAM		155
+
+	AttackSpeed		35
+	AttackDamage		6d6+10
+	AttackAttribute		Wrestling
+	AttackHitScript		:npchitscripts:defaulthitscript
+	AttackHitSound		0x290
+	AttackMissSound		0x291
+	DeathSound		0x292
+	AR				50
+
+	Tactics			65
+	Wrestling			95
+	MagicResistance		120
+	Magery			105
+	EvaluatingIntelligence	90	
+	Animallore			100
+	Anatomy			35
+
+	spell	:damage_spells:fstrike
+	spell	:damage_spells:ebolt
+	spell	:damage_spells:lightning
+	spell	:damage_spells:harm
+	spell	:damage_spells:mindblast
+	spell	:poison_spells:poison
+	spell	:damage_spells:magicarrow
+	spell	:damage_spells:fireball
+	spell	:statmod_spells:paralyze
+	spell	:damage_spells:explosion
+	spell	:misc_spells:manadrain
+	
+	virtue			3
+	provoke			87
+	hostile			1
+	poison			strong
+	electrical			strong
+	nocorpse			1
+}
+
 NpcTemplate hiryu
 {
 	Name			a hiryu
@@ -128,7 +373,8 @@ NpcTemplate hiryu
 	STR			700
 	INT			160
 	DEX			150
-	HITS			700
+	CProp	BonusMaxHP i-150
+	HITS			550
 	MANA		160
 	STAM		150
 
@@ -155,6 +401,134 @@ NpcTemplate hiryu
 	cold				weak
 }
 
+NpcTemplate lesserhiryu
+{
+	Name			a lesser hiryu
+	script			:hostiles:ai_killpcs_normal_default
+	ObjType		243
+	Color			0
+	TrueColor		0
+	colorrange		monsterhiryu
+	Gender		0
+	STR			400
+	INT			100
+	DEX			100
+	CProp	BonusMaxHP i-100
+	HITS			300
+	MANA		100
+	STAM		100
+
+	AttackSpeed		36
+	AttackDamage		6d6+10
+	AttackAttribute		Wrestling
+	AttackHitScript		:npchitscripts:defaulthitscript
+	AttackHitSound		0x4fd
+	AttackMissSound		0x500
+	DeathSound		0x4fc
+	AR				40
+
+	Tactics			90
+	Wrestling			100
+	MagicResistance		80
+	Anatomy			65
+
+	virtue			2
+	tameskill			99
+	food				meat
+	provoke			100
+	hostile			1
+	fire				strong
+	cold				weak
+}
+
+NpcTemplate kappa
+{
+	Name			a kappa
+	script			:vampires:ai_vampire_warrior
+	ObjType		240
+	Color			0
+	TrueColor		0
+	Gender		0
+	STR			230
+	INT			55
+	DEX			75
+	HITS			230
+	MANA		55
+	STAM		75
+
+	AttackSpeed		35
+	AttackDamage		4d6+10
+	AttackAttribute		Wrestling
+	AttackHitScript		:npchitscripts:defaulthitscript
+	AttackHitSound		0x50a
+	AttackMissSound		0x50d
+	DeathSound		0x509
+	AR				40
+
+	Tactics			90
+	Wrestling			65
+	MagicResistance		70
+
+	virtue			2
+	provoke			64
+	hostile			1
+	vampire_drain		10
+	electrical			weak
+	cold				weak
+}
+
+NpcTemplate ladyofthesnow
+{
+	Name			a lady of the snow
+	script			:hostiles:ai_killpcs_normal_spellcaster
+	ObjType		252
+	Color			0
+	TrueColor		0
+	Gender		0
+	STR			305
+	INT			495
+	DEX			125
+	CProp	BonusMaxHP i320
+	HITS			625
+	MANA		495
+	STAM		125
+	HP_MOD		400
+
+	AttackSpeed		23
+	AttackDamage		4d6
+	AttackAttribute		Wrestling
+	AttackHitScript		:npchitscripts:defaulthitscript
+	AttackHitSound		0x483
+	AttackMissSound		0x483
+	DeathSound		0x371
+	AR				40
+
+	Tactics			100
+	Wrestling			100
+	MagicResistance		105
+	Magery			110
+	EvaluatingIntelligence	100
+	Meditation			90
+	SpiritSpeak			100
+	AnimalLore			100
+
+
+	spell	:damage_spells:ebolt
+	spell	:damage_spells:lightning
+	spell	:statmod_spells:paralyze
+	spell	:poison_spells:poison
+	spell	:misc_spells:manadrain
+	spell	:necro_spells:frostfield
+	spell	:druid_spells:snowstorm
+	
+	undead			1
+	virtue			3
+	provoke			112
+	hostile			1
+	poison			strong
+	cold				strong
+	electrical			strong
+}
 
 NpcTemplate oni
 {
@@ -167,7 +541,8 @@ NpcTemplate oni
 	STR			910
 	INT			195
 	DEX			300
-	HITS			910
+	CProp	BonusMaxHP i-400
+	HITS			510
 	MANA		195
 	STAM		300
 
@@ -187,7 +562,6 @@ NpcTemplate oni
 	Magery			106
 	EvaluatingIntelligence	125
 	SpiritSpeak			100
-	Animallore			100
 
 
 	spell	:damage_spells:fstrike
@@ -196,7 +570,6 @@ NpcTemplate oni
 	spell	:damage_spells:fireball
 	spell	:poison_spells:poison
 	spell	:necro_spells:plague
-	spell	:druid_spells:stingingswarm
 	spell	:statmod_spells:paralyze
 	spell	:damage_spells:explosion
 	spell	:misc_spells:manadrain
@@ -307,4 +680,350 @@ NpcTemplate runebeetle
 	hostile			1
 	poison			immune
 }
+
+NpcTemplate tsukiwolf
+{
+	Name			a tsuki wolf
+	script			:hostiles:ai_killpcs_normal_default
+	ObjType		250
+	Color			0
+	TrueColor		0
+	Gender		0
+	STR			450
+	INT			76
+	DEX			200
+	HITS			450
+	MANA		76
+	STAM		200
+
+	AttackSpeed		35
+	AttackDamage		6d6+10
+	AttackAttribute		Wrestling
+	AttackHitScript		:npchitscripts:defaulthitscript
+	AttackHitSound		0x52c
+	AttackMissSound		0x52f
+	DeathSound		0x52b
+	AR				50
+
+	Tactics			110
+	Wrestling			102
+	MagicResistance		70
+	Anatomy			75
+
+	virtue			3
+	provoke			88
+	hostile			1
+	fire				strong
+	cold				strong
+	electrical			strong
+	poison			strong
+}
+
+NpcTemplate yamandon
+{
+	Name			a yamandon
+	script		:hostiles:ai_killpcs_normal_default
+	ObjType		249
+	Color		0
+	TrueColor		0
+	Gender		0
+	STR			786
+	INT			101
+	DEX			251
+	CProp	BonusMaxHP	i815
+	HITS			1601
+	MANA			101
+	STAM			251
+
+	AttackSpeed		35
+	AttackDamage		6d6+10
+	AttackAttribute	Wrestling
+	AttackHitScript	:npchitscripts:defaulthitscript
+	AttackHitSound		0x4ed
+	AttackMissSound	0x4f0
+	DeathSound		0x4eb
+	AR				40
+
+	Wrestling			112
+	Tactics			117
+	MagicResistance		117
+	Anatomy			115
+	Poisoning			120
+
+	alignment			evil
+	hostile			1
+	virtue			5
+	provoke			156
+	poisonous			1
+	fire				strong
+	poison			strong
+}
+
+NpcTemplate yomotsuelder
+{
+	Name			a yomotsu elder
+	script		:hostiles:ai_killpcs_normal_archer
+	ObjType		255
+	Color		0
+	TrueColor		0
+	Gender		0
+	STR			686
+	INT			17
+	DEX			251
+	CProp	BonusMaxHP	i115
+	HITS			801
+	MANA			17
+	STAM			251
+
+	AttackSpeed		35
+	AttackDamage		6d6+10
+	AttackAttribute	Throwing
+	AttackHitScript	:npchitscripts:defaulthitscript
+	AttackHitSound		0x436
+	AttackMissSound	0x437
+	DeathSound		0x43b
+	AR				40
+
+	Wrestling			110
+	Throwing			115
+	Tactics			115
+	MagicResistance		100
+	Anatomy			115
+
+	ammotype			0x255d
+	missileweapon		throwingaxes
+	ammoamount		100
+	
+	alignment			evil
+	hostile			1
+	virtue			5
+	provoke			126
+	fire				weak
+	electrical			weak
+	poison			weak
+}
+
+NpcTemplate yomotsupriest
+{
+	Name			a yomotsu priest
+	script			:hostiles:ai_killpcs_normal_spellcaster
+	ObjType		253
+	Color			0
+	TrueColor		0
+	Gender		2
+	STR			486
+	INT			601
+	DEX			101
+	HITS			486
+	MANA		601
+	STAM		101
+
+	AttackSpeed		35
+	AttackDamage		3d6
+	AttackAttribute		Wrestling
+	AttackHitScript		:npchitscripts:defaulthitscript
+	AttackHitSound		0x436
+	AttackMissSound	0x437
+	DeathSound		0x43b
+	AR				40
+
+	Tactics			55
+	Wrestling			48
+	MagicResistance		112
+	Magery			105
+	EvaluatingIntelligence	92
+	Meditation			100
+
+	spell	:damage_spells:fstrike
+	spell	:damage_spells:ebolt
+	spell	:damage_spells:lightning
+	spell	:damage_spells:harm
+	spell	:damage_spells:mindblast
+	spell	:poison_spells:poison
+	spell	:damage_spells:magicarrow
+	spell	:damage_spells:fireball
+	spell	:statmod_spells:paralyze
+	spell	:damage_spells:explosion
+	spell	:misc_spells:manadrain
+	
+	virtue			3
+	provoke			117
+	hostile			1
+	fire				weak
+	electrical			weak
+	poison			weak
+}
+
+NpcTemplate yomotsuwarrior
+{
+	Name			a yomotsu warrior
+	script		:hostiles:ai_killpcs_normal_archer
+	ObjType		245
+	Color		0
+	TrueColor		0
+	Gender		0
+	STR			486
+	INT			17
+	DEX			151
+	HITS			486
+	MANA			17
+	STAM			151
+
+	AttackSpeed		35
+	AttackDamage		4d6+3
+	AttackAttribute	Wrestling
+	AttackHitScript	:npchitscripts:defaulthitscript
+	AttackHitSound		0x436
+	AttackMissSound	0x437
+	DeathSound		0x43b
+	AR				40
+
+	Wrestling			97
+	Throwing			97
+	Tactics			95
+	MagicResistance		82
+	Anatomy			85
+
+	ammotype			0x2804
+	missileweapon		throwingdarts
+	ammoamount		100
+	
+	alignment			evil
+	hostile			1
+	virtue			3
+	provoke			99
+	fire				weak
+	electrical			weak
+	poison			weak
+}
+
+NpcTemplate firebeetle
+{
+	Name			a fire beetle
+	script		:hostiles:ai_killpcs_normal_firebreather
+	ObjType		169
+	Color			1161
+	TrueColor		1161
+	Gender		0
+	STR			300
+	INT			500
+	DEX			100
+	CProp	BonusMaxHP i-100
+	HITS			200
+	MANA			500
+	STAM			100
+
+	AttackSpeed		35
+	AttackDamage		4d6+3
+	AttackAttribute	Wrestling
+	AttackHitScript	:npchitscripts:defaulthitscript
+	AttackHitSound		0x163
+	AttackMissSound		0x164
+	DeathSound		0x21e
+	AR				25
+
+	MagicResistance		90
+	Tactics			100
+	Wrestling			100
+	Anatomy			0
+
+	alignment			neutral
+	provoke			100
+	virtue			3
+	tameskill			94
+	food				meat
+	provoke			84
+	hostile			1
+	firedamage		6d10
+	fire				strong
+	cold				weak
+	electrical			weak
+}
+
+NpcTemplate eliteninja
+{
+	Name			<random> the elite ninja
+	script			:tokuno:ai_eliteninja
+	ObjType		0x190
+	Color		33784
+	TrueColor		33784
+	Gender		2
+	STR			225
+	INT			165
+	DEX			95
+	CProp BonusMaxHP	i125
+	HITS			350
+	MANA			165
+	STAM			95
+
+	AttackSpeed		50
+	AttackDamage		4d6+3
+	AttackAttribute	Wrestling
+	AttackHitSound		0x534
+	AttackMissSound	0x239
+	AR				35
+
+	MagicResistance		100
+	Tactics			130
+	Throwing			120
+	Swordsmanship		120
+	Fencing			120
+	Macefighting		120
+	Hiding			100
+	Wrestling			120
+	Anatomy			120
+	Ninjitsu			120
+
+	virtue			3
+	equip				eliteninja
+	missileweapon		shuriken
+	ammotype			0x27ac
+	ammoamount		30
+	alignment			evil
+	saywords			1
+	hostile			1
+	cold				weak
+}
+
+NpcTemplate ronin
+{
+	Name			<random> the ronin
+	script			:evilhumans:ai_killpcs_smart_default
+	ObjType		0x190
+	Color		33784
+	TrueColor		33784
+	Gender		2
+	STR			375
+	INT			110
+	DEX			65
+	CProp	BonusMaxHP	i25
+	HITS			400
+	MANA			110
+	STAM			45
+
+	AttackSpeed		50
+	AttackDamage		6d6+10
+	AttackAttribute	Swordsmanship
+	AttackHitScript	:npchitscripts:defaulthitscript
+	AttackHitSound		0x534
+	AttackMissSound	0x23b
+	AR				45
+
+	Tactics			130
+	Wrestling			108
+	Swordsmanship		108
+	Fencing			108
+	Macefighting		108
+	MagicResistance		100
+	Healing			100
+	Anatomy			125
+	Bushido			120
+
+	alignment			evil
+	saywords			1
+	hostile			1
+	dress				platetokuno
+	cold				weak
+}
+
 
