--- a/trunk/099/pkg/skills/craftingskills/tailoring/cloth_items.cfg
+++ b/trunk/099/pkg/skills/craftingskills/tailoring/cloth_items.cfg
@@ -224,6 +224,102 @@ tailoring 0xB00D
 	stackable	1
 }
 
+// Samurai Empire
+tailoring 0x27cd
+{
+	Name		male kimono
+	material	20
+	skill	95
+}
+
+tailoring 0x27ce
+{
+	Name		female kimono
+	material	20
+	skill	95
+}
+
+tailoring 0x27da
+{
+	Name		cloth ninja hood
+	material	4
+	skill	35
+}
+
+tailoring 0x27df
+{
+	Name		cloth ninja jacket
+	material	12
+	skill	75
+}
+
+tailoring 0x27e1
+{
+	Name		waraji and tabi
+	material	6
+	skill	40
+}
+
+tailoring 0x27e2
+{
+	Name		ninja tabi
+	material	6
+	skill	40
+}
+
+tailoring 0x27e3
+{
+	Name		kasa
+	material	6
+	skill	35
+}
+
+tailoring 0x27e4
+{
+	Name		kamishimo
+	material	20
+	skill	95
+}
+
+tailoring 0x27e5
+{
+	Name		hakama
+	material	10
+	skill	65
+}
+
+tailoring 0x27e6
+{
+	Name		tattsuke-hakama
+	material	12
+	skill	75
+}
+
+tailoring 0x27e7
+{
+	Name		hakama-shita
+	material	12
+	skill	75
+}
+
+tailoring 0x27eb
+{
+	Name		obi
+	material	6
+	skill	50
+}
+
+tailoring 0x27ec
+{
+	Name		jin baori
+	material	8
+	skill	50
+}
+
+
+
+
+// Mondain's Legacy
 tailoring 0x3176
 {
 	Name		fancy elven shirt
