--- a/trunk/099/pkg/skills/craftingskills/tailoring/leather_items.cfg
+++ b/trunk/099/pkg/skills/craftingskills/tailoring/leather_items.cfg
@@ -457,6 +457,70 @@ leather 0x3171
 // leather yoroi
 /////////////////
 
+leather 0x27c5
+{
+	name		leather mempo
+	material	6
+	skill	45
+	time		1
+	hasquality	1
+}
+
+leather 0x27c1
+{
+	name		leather jingasa
+	material	8
+	skill	50
+	time		1
+	hasquality	1
+}
+
+leather 0x27c3
+{
+	name		leather kabuto
+	material	8
+	skill	50
+	time		1
+	hasquality	1
+}
+
+leather 0x27c9
+{
+	name		leather hiro sode
+	material	12
+	skill	55
+	time		1
+	hasquality	1
+}
+
+leather 0x27d1
+{
+	name		leather suneate
+	material	20
+	skill	65
+	time		1
+	hasquality	1
+}
+
+leather 0x27d5
+{
+	Name		leather haidate
+	material	20
+	skill	65
+	time		1
+	hasquality	1
+}
+
+leather 0x27c6
+{
+	name		leather do
+	material	20
+	skill	65
+	time		1
+	hasquality	1
+}
+
+
 /////////////////
 // ninja gear
 /////////////////
@@ -479,4 +543,109 @@ leather 0X2790
 	hasquality	1
 	bulk_deed		0
 }
+
+leather 0x27dd
+{
+	name		leather ninja mitts
+	material	8
+	skill	65
+	time		2
+	hasquality	1
+}
+
+leather 0x27d9
+{
+	name		leather ninja hood
+	material	12
+	skill	70
+	time		2
+	hasquality	1
+}
+
+leather 0x27dc
+{
+	Name		leather ninja pants
+	material	32
+	skill	90
+	time		2
+	hasquality	1
+}
+
+leather 0x27de
+{
+	Name		leather ninja jacket
+	material	32
+	skill	90
+	time		2
+	hasquality	1
+}
+
+
+///////////////////
+//  studded yoroi
+///////////////////
+
+leather 0x27e8
+{
+	name		studded mempo
+	material	12
+	skill	70
+	time		3
+	hasquality	1
+}
+
+leather 0x27cf
+{
+	name		studded jingasa
+	material	22
+	skill	75
+	time		3
+	hasquality	1
+}
+
+leather 0x27d4
+{
+	name		studded kabuto
+	material	22
+	skill	75
+	time		3
+	hasquality	1
+}
+
+leather 0x27ca
+{
+	Name		studded hiro sode
+	material	32
+	skill	85
+	time		3
+	hasquality	1
+}
+
+leather 0x27d2
+{
+	Name		studded suneate
+	material	45
+	skill	95
+	time		3
+	hasquality	1
+}
+
+leather 0x27c7
+{
+	Name		studded do
+	material	45
+	skill	95
+	time		3
+	hasquality	1
+}
+
+leather 0x27d6
+{
+	Name		studded haidate
+	material	45
+	skill	95
+	time		3
+	hasquality	1
+}
+
 
