--- a/trunk/099/pkg/skills/craftingskills/tailoring/menu.cfg
+++ b/trunk/099/pkg/skills/craftingskills/tailoring/menu.cfg
@@ -6,6 +6,9 @@ Keymenu clothmenu
 	Submenu	0x1539	misc_clothing	Other Clothing
 	Submenu	0x1713	hats1		Hats
 	Submenu	0x1713	hats2		More Hats
+	Submenu	0x1517	elven_clothes	Elven Clothes
+	Submenu	0x1517	tokuno_clothes	Tokuno Clothes
+	Submenu	0x1517	tokuno_clothes2	More Tokuno Clothes
 	Submenu	0x153D	other_cloth	Misc.
 }
 
@@ -18,8 +21,16 @@ Submenu shirts
 	Entry	0x1FA1	Tunic
 	Entry	0x1F7B	Doublet
 	Entry	0x1F9F	Jester's Suit
+}
+
+Submenu elven_clothes
+{
+	show_upgrade_options	0
+	Entry	0x3173	Male Elven Robe
+	Entry	0x3174	Female Elven Robe
 	Entry	0x3175	Elven Shirt
 	Entry	0x3176	Fancy Elven Shirt
+	Entry	0x3179	Elven Pants
 }
 
 Submenu pants
@@ -28,7 +39,6 @@ Submenu pants
 	Entry	0x152E	Short pants
 	Entry	0x1539	Fancy pants
 	Entry	0x1537	Kilt
-	Entry	0x3179	Elven Pants
 }
 
 Submenu dresses
@@ -47,8 +57,6 @@ Submenu misc_clothing
 	Entry	0x153B	Half Apron
 	Entry	0x153D	Full Apron
 	Entry	0x1541	Body Sash
-	Entry	0x3173	Male Elven Robe
-	Entry	0x3174	Female Elven Robe
 }
 
 Submenu hats1
@@ -80,7 +88,28 @@ Submenu other_cloth
 	Entry	0xB00D	Banner Deed
 }
 
+Submenu tokuno_clothes
+{
+	show_upgrade_options	0
+	Entry	0x27e3	Kasa
+	Entry	0x27da	Cloth Ninja Hood
+	Entry	0x27e7	Hakama-Shita
+	Entry	0x27df	Cloth Ninja Jacket
+	Entry	0x27e5	Hakama
+	Entry	0x27e6	Tattsuke-Hakama
+	Entry	0x27e1	Waraji and Tabi
+	Entry	0x27e2	Ninja Tabi
+}
 
+Submenu tokuno_clothes2
+{
+	show_upgrade_options	0
+	Entry	0x27cd	Male Kimono
+	Entry	0x27ce	Female Kimono
+	Entry	0x27e4	Kamishimo
+	Entry	0x27eb	Obi
+	Entry	0x27ec	Jin-Baori
+}
 
 
 Item leathermenu
@@ -92,9 +121,9 @@ Item leathermenu
 	Submenu	0x0E76	other_leather		Misc.
 	Submenu	0x2fc5	leaf_armor			Leaf Armor
 	Submenu	0x2b74	hide_armor			Hide Armor
-//	Submenu	0x13CC	leather_yoroi		Leather Yoroi
-//	Submenu	0x13DB	studded_yoroi		Studded Yoroi
-//	Submenu	0x13cc	ninja				Ninja Gear
+	Submenu	0x13CC	leather_yoroi		Leather Yoroi
+	Submenu	0x13cc	ninja_gear			Ninja Gear
+	Submenu	0x13DB	studded_yoroi		Studded Yoroi
 }
 
 Item leather_armor
@@ -149,7 +178,6 @@ Item other_leather
 	Entry	0x0E75	Backpack
 	Entry	0x1374	Bridle
 	Entry	0x3171	Quiver
-//	Entry	0x27db	Leather Ninja Belt
 }
 
 Item leaf_armor
@@ -178,6 +206,32 @@ Item hide_armor
 
 Item ninja_gear
 {
+	Entry	0x27de	Leather Ninja Jacket
+	Entry	0x27dc	Leather Ninja Pants
+	Entry	0x27dd	Leather Ninja Mitts
+	Entry	0x27d9	Leather Ninja Hood
 	Entry	0x2790	Shuriken Thrower
 	Entry	0x27f5	Dart Thrower
+}
+
+Item leather_yoroi
+{
+	Entry	0x27c6	Leather Do
+	Entry	0x27d1	Leather Suneate
+	Entry	0x27d5	Leather Haidate
+	Entry	0x27c9	Leather Hiro Sode
+	Entry	0x27c5	Leather Mempo
+	Entry	0x27c3	Leather Kabuto
+	Entry	0x27c1	Leather Jingasa
+}
+
+Item studded_yoroi
+{
+	Entry	0x27c7	Studded Do
+	Entry	0x27d2	Studded Suneate
+	Entry	0x27d6	Studded Haidate
+	Entry	0x27ca	Studded Hiro Sode
+	Entry	0x27e8	Studded Mempo
+	Entry	0x27d4	Studded Kabuto
+	Entry	0x27cf	Studded Jingasa
 }
