--- a/trunk/099/pkg/skills/craftingskills/tinkering/itemdesc.cfg
+++ b/trunk/099/pkg/skills/craftingskills/tinkering/itemdesc.cfg
@@ -356,3 +356,30 @@ Item 0x16058
 	VendorSellsFor	500
 }
 
+Item 0x255d
+{
+	Name			throwingaxe
+	Weight		1/50
+	VendorSellsFor	5
+}
+
+Item 0x16059
+{
+	Name			firethrowingaxe
+	Desc			fire throwing axe%s
+	Graphic		0x27ac
+	Color		1644
+	Weight		1/50
+	VendorSellsFor	500
+}
+
+Item 0x1605a
+{
+	Name			frostthrowingaxe
+	Desc			frost throwing axe%s
+	Graphic		0x27ac
+	Color		1165
+	Weight		1/50
+	VendorSellsFor	500
+}
+
