--- a/trunk/099/regions/light.cfg
+++ b/trunk/099/regions/light.cfg
@@ -4,6 +4,28 @@
 LightRegion Background
 {
 	Range		0 0 5119 4095
+	Realm		britannia
+	LightLevel	0
+}
+
+LightRegion MalasBackground
+{
+	Range		511 0 2559 2047
+	Realm		malas
+	LightLevel	0
+}
+
+LightRegion TokunoBackground
+{
+	Range		0 0 1447 1447
+	Realm		tokuno
+	LightLevel	0
+}
+
+LightRegion TerMurBackground
+{
+	Range		256 2750 1279 4095
+	Realm		termur
 	LightLevel	0
 }
 
@@ -40,5 +62,13 @@ LightRegion CastleBlackthorne
 LightRegion Dungeons
 {
     Range       5120 0 6143 4095
+    Realm		britannia
+    LightLevel  20
+}
+
+LightRegion MalasDungeons
+{
+    Range       0 0 510 2047
+    Realm		malas
     LightLevel  20
 }
