--- a/trunk/099/regions/regions.cfg
+++ b/trunk/099/regions/regions.cfg
@@ -246,6 +246,14 @@ Region VerLorReg
 	midi		82
 }
 
+Region MalasBackground
+{
+	Range		511 0 2559 2047
+	Realm		malas
+	midi        28
+	midi        27
+}
+
 Region Luna
 {
 	Range		872 420 1107 652
@@ -282,6 +290,14 @@ Region Zento
 	LeaveText   You have left the protection of the town guards.
 	Guarded	1
 	midi		49
+}
+
+Region TokunoDungeons
+{
+	Range	0 0 200 712
+	Realm	malas
+	Guarded	0
+	midi 50
 }
 
 Region TerMurBackground
